[package]
name = "hypertext"
version = "0.20.2"
authors = ["muji <muji@tmpfs.org>"]
description = "Fast and lean static site generator"
repository = "https://github.com/hypertext-live/hypertext"
edition = "2018"
default-run = "ht"

[workspace]
members = [
  "components/book",
  "components/extras/bundle",
  "components/extras/bundler",
  "components/cache",
  "components/collator",
  "components/compiler",
  "components/config",
  "components/datasource",
  "components/dirs",
  "components/frontmatter",
  "components/git",
  "components/installer",
  "components/livereload",
  "components/locale",
  "components/minify",
  "components/preference",
  "components/publisher",
  "components/report",
  "components/search",
  "components/server",
  "components/site",
  "components/syntax",
  "components/toc",
  "components/transform",
  "components/updater",
  "components/utils",
  "components/workspace",
]

[dependencies]
book = {version = "0.1", path = "components/book" }
cache = {version = "0.1", path = "components/cache" }
compiler = {version = "0.1", path = "components/compiler" }
config = {version = "0.1", path = "components/config" }
datasource = {version = "0.1", path = "components/datasource" }
dirs = {version = "0.1", path = "components/dirs" }
git = {version = "0.1", path = "components/git" }
livereload = {version = "0.1", path = "components/livereload" }
locale = {version = "0.1", path = "components/locale" }
preference = {version = "0.1", path = "components/preference" }
publisher = {version = "0.1", path = "components/publisher" }
report = {version = "0.1", path = "components/report" }
server = {version = "0.1", path = "components/server" }
site = {version = "0.1", path = "components/site" }
updater = {version = "0.1", path = "components/updater" }
utils = {version = "0.1", path = "components/utils" }
workspace = {version = "0.1", path = "components/workspace" }

thiserror = "1"
open = "1.1"
structopt = "0.3"
log = "0.4.8"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = { version = "0.5", features = ["preserve_order"] }
semver = "0.10"

tokio = { version = "0.2.18", features = ["macros"] }
warp = { version = "0.2.4", default-features = false, features = ["websocket"] }
notify = { version = "4.0.0" }

[profile.release]
lto = true
codegen-units = 1
#opt-level = "z"
