[package]
name = "uwe"
version = "0.42.1"
authors = ["muji <muji@tmpfs.org>"]
description = "Universal web editor"
repository = "https://github.com/uwe-app/app"
edition = "2018"
default-run = "uwe"

[workspace]
members = [
  "components/collator",
  "components/collections",
  "components/compiler",
  "components/config",
  "components/dirs",
  "components/frontmatter",
  "components/livereload",
  "components/locale",
  "components/minify",
  "components/plugin",
  "components/preference",
  "components/publisher",
  "components/release",
  "components/scm",
  "components/server",
  "components/site",
  "components/syntax",
  "components/toc",
  "components/transform",
  "components/utils",
  "components/workspace",
]

[dependencies]
collections = {version = "0.1", path = "components/collections" }
compiler = {version = "0.1", path = "components/compiler" }
config = {version = "0.1", path = "components/config" }
dirs = {version = "0.1", path = "components/dirs" }
scm = {version = "0.1", path = "components/scm" }
livereload = {version = "0.1", path = "components/livereload" }
locale = {version = "0.1", path = "components/locale" }
plugin = {version = "0.1", path = "components/plugin" }
preference = {version = "0.1", path = "components/preference" }
publisher = {version = "0.1", path = "components/publisher" }
release = {version = "0.1", path = "components/release" }
server = {version = "0.1", path = "components/server" }
site = {version = "0.1", path = "components/site" }
utils = {version = "0.1", path = "components/utils" }
workspace = {version = "0.1", path = "components/workspace" }

futures = "0.3"
thiserror = "1"
open = "1.1"
structopt = {version = "^0.3.21", features = ["wrap_help"]}
log = "0.4.8"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = { version = "0.5", features = ["preserve_order"] }
semver = "0.10"
once_cell = "1.4"
hex = "0.4.2"
human_bytes = "0.2.1"
url = "2"
unic-langid = "0.9.0"
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "fs"] }

# uwe-shim
winapi = "0.3.9"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
