[package]
name = "collator"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
frontmatter = {version = "0.1", path = "../frontmatter" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.8"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
Inflector = "0.11"
toml = "0.5"
