[package]
name = "collator"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
frontmatter = {version = "0.1", path = "../frontmatter" }
locale = {version = "0.1", path = "../locale" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
log = "0.4.8"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
Inflector = "0.11"
toml = "0.5"
crossbeam = "0.7"
chrono = { version = "0.4", features = ["serde"] }
url = "2.1.1"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
jsonfeed = {version = "0.3", path = "../../../library/jsonfeed"}
indexmap = {version = "^1.6.1", features = ["serde-1"]}
