[package]
name = "collections"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
collator = {version = "0.1", path = "../collator" }
config = {version = "0.1", path = "../config" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "fs"] }
log = "0.4.8"
slug = "0.1.4"
serde = "1"
serde_json = "1"
toml = "0.5"

