[package]
name = "compiler"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
book = {version = "0.1", path = "../book" }
collator = {version = "0.1", path = "../collator" }
config = {version = "0.1", path = "../config" }
datasource = {version = "0.1", path = "../datasource" }
frontmatter = {version = "0.1", path = "../frontmatter" }
livereload = {version = "0.1", path = "../livereload" }
locale = {version = "0.1", path = "../locale" }
minify = {version = "0.1", path = "../minify" }
transform = {version = "0.1", path = "../transform" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.4"
serde_json = "1"
toml = "0.5"
handlebars = {version = "3.3", default-features = true, features = [ "dir_source" ] }
slug = "0.1.4"
rand = "0.7.3"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
fluent-templates = {version = "0.5.9", default-features = true, features = ["handlebars"]}

rayon = "1.3"
crossbeam = "0.7"
http = "0.2"

futures = "0.3"
futures-util = { version = "0.3.4" }
tokio = { version = "0.2.18", features = ["macros"] }


#warp = { version = "0.2.2", default-features = false, features = ["websocket"] }

once_cell = "1.4"
