[package]
name = "compiler"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
collator = {version = "0.1", path = "../collator" }
collections = {version = "0.1", path = "../collections" }
config = {version = "0.1", path = "../config" }
frontmatter = {version = "0.1", path = "../frontmatter" }
livereload = {version = "0.1", path = "../livereload" }
locale = {version = "0.1", path = "../locale" }
minify = {version = "0.1", path = "../minify" }
transform = {version = "0.1", path = "../transform" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "1.5.1"
toml = "0.5"
#bracket = { path = "../../../bracket", version = "^0.9.20" }
bracket = "^0.9.28"
bracket-fluent = "^0.5.2"
slug = "0.1.4"
rand = "0.7.3"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "^0.13.0"

rayon = "1.3"
crossbeam = "0.7"

futures = "0.3"
futures-util = { version = "0.3.4" }
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "fs"] }
