[package]
name = "config"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
dirs = {version = "0.1", path = "../dirs" }
utils = {version = "0.1", path = "../utils" }

chrono = { version = "0.4", features = ["serde"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "1.4.0"
thiserror = "1"
toml = "0.5"
unic-langid = "0.9.0"
url = "2"
http = "0.2"
once_cell = "1.4"
globset = {version = "0.4.5", features = ["serde1"]}
jsonfeed = {version = "0.3", path = "../../../jsonfeed"}
slug = "0.1.4"
