[package]
name = "config"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
dirs = {version = "0.1", path = "../dirs" }
utils = {version = "0.1", path = "../utils" }

chrono = { version = "0.4", features = ["serde"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "1.5.0-alpha.2"
thiserror = "1"
toml = "0.5"
unic-langid = "0.9.0"
url = "2"
http = "0.2"
semver = "0.10"
once_cell = "1.4"
globset = {version = "0.4.5", features = ["serde1"]}
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
jsonfeed = {version = "0.3", path = "../../../library/jsonfeed"}
slug = "0.1.4"
spdx = "0.3.4"
