[package]
name = "config"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
dirs = {version = "0.1", path = "../dirs" }
utils = {version = "0.1", path = "../utils" }

chrono = { version = "0.4", features = ["serde"] }
log = "0.4.8"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
serde_with = "1.5.1"
thiserror = "1"
toml = "0.5"
unic-langid = "0.9.0"
url = "2"
git-url-parse = "0.3.1"
http = "0.2"
semver = "0.10"
once_cell = "1.4"
globset = {version = "0.4.5", features = ["serde1"]}
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
slug = "0.1.4"
spdx = "0.3.4"
indexmap = {version = "^1.6.1", features = ["serde-1"]}
num_cpus = "1.13.0"
dyn-clone = "1"

[dependencies.jsonfeed]
version = "0.3"
git = "https://github.com/uwe-app/jsonfeed"
