[package]
name = "datasource"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
loader = {version = "0.1", path = "../loader" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
log = "0.4.8"
ignore = "0.4"
slug = "0.1.4"
serde_json = "1"
toml = "0.5"
flume = "0.7"
