[package]
name = "datasource"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = {version = "0.1", path = "../cache" }
collator = {version = "0.1", path = "../collator" }
config = {version = "0.1", path = "../config" }
locale = {version = "0.1", path = "../locale" }
utils = {version = "0.1", path = "../utils" }

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures = "0.3"
tokio = { version = "0.2.22", features = ["full"] }
ignore = "0.4"
crossbeam = "0.7"
log = "0.4.8"
slug = "0.1.4"
serde = "1"
serde_json = "1"
toml = "0.5"
url = "2.1.1"
jsonfeed = {version = "0.3", path = "../../../jsonfeed"}
