[package]
name = "hosting"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
rusoto_core = "0.45.0"
rusoto_signature = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = { version = "0.2.22", features = ["fs"] }
tokio-util = { version = "0.3", default-features = false, features = ["codec"] }
futures-util = { version = "0.3.4" }
serde_json = "1"
