[package]
name = "hosting"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
#config = {version = "0.1", path = "../config" }
#utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
rusoto_core = "0.46.0"
rusoto_signature = "0.46.0"
rusoto_s3 = "0.46.0"
tokio = { version = "^1.0", features = ["full"] }
serde_json = "1"
serde = "1"
once_cell = "1.4"
