[package]
name = "loader"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
frontmatter = {version = "0.1", path = "../frontmatter" }
link = {version = "0.1", path = "../link" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
Inflector = "0.11"
lazy_static = "1"
toml = "0.5"
