[package]
name = "locale"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }

thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
unic-langid = "0.9.0"
fluent-templates = {version = "0.5.9", default-features = true, features = ["handlebars"]}
