[package]
name = "plugin"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = {version = "0.1", path = "../cache" }
config = {version = "0.1", path = "../config" }
preference = {version = "0.1", path = "../preference" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
sha3 = "0.9.1"
toml = "0.5"
log = "0.4.8"
async-recursion = "0.3.1"
tar = { version = "0.4", default-features = false }
xz2 = "0.1.6"
ignore = "0.4"
crossbeam = "0.7"
regex = "1.3.9"
hex = "0.4.2"
tempfile = "3.1.0"
scopeguard = "1.1.0"
serde_json = "1"
async-trait = "0.1.40"
