[package]
name = "plugin"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
dirs = {version = "0.1", path = "../dirs" }
publisher = {version = "0.1", path = "../publisher" }
scm = {version = "0.1", path = "../scm" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
sha3 = "0.9.1"
toml = "0.5"
log = "0.4.8"
bracket = "^0.9.32"
async-recursion = "0.3.1"
tar = { version = "0.4", default-features = false }
xz2 = "0.1.6"
regex = "1.3.9"
hex = "0.4.2"
tempfile = "3.1.0"
scopeguard = "1.1.0"
serde_json = "1"
async-trait = "0.1.40"
reqwest = "0.11"
tokio = { version = "^1.0", features = ["full"] }
url = "2"
http = "0.2"
urlencoding = "1.1.1"
slug = "0.1.4"
spdx = "0.3.4"
pbr = "1.0.4"
human_bytes = "0.2.1"
semver = "0.10"
