[package]
name = "preference"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
dirs = {version = "0.1", path = "../dirs" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "1.5.1"
toml = "0.5"
