[package]
name = "project"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
dirs = {version = "0.1", path = "../dirs" }
plugin = {version = "0.1", path = "../plugin" }
preference = {version = "0.1", path = "../preference" }
scm = {version = "0.1", path = "../scm" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive", "rc"] }
once_cell = "1.4"
toml = { version = "0.5", features = ["preserve_order"] }
url = "2"
