[package]
name = "publisher"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
report = {version = "0.1", path = "../report" }

thiserror = "1"
log = "0.4.8"
mime_guess = "2.0"
md-5 = "0.9.0"
#rusoto_core = {version = "0.45.0", default-features = false, features = ["rustls"]}
rusoto_core = "0.45.0"
rusoto_signature = "0.45.0"
#rusoto_s3 = { version = "0.45.0", default-features = false, features = ["rustls"] }
rusoto_s3 = "0.45.0"
tokio = { version = "0.2.22", features = ["fs"] }
tokio-util = { version = "0.3", default-features = false, features = ["codec"] }
bytes = "0.5"
futures-util = { version = "0.3.4" }
