[package]
name = "publisher"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
mime_guess = "2.0"
md-5 = "0.9.0"
ignore = "^0.4"
rusoto_core = {version = "0.48.0", default-features = false, features = ["rustls"]}
#rusoto_core = "^0.46.0"
#rusoto_signature = "^0.46.0"
#rusoto_s3 = "^0.46.0"
rusoto_s3 = {version = "0.48.0", default-features = false, features = ["rustls"]}
rusoto_signature = {version = "0.48.0"}
tokio = { version = "^1.0", features = ["full"] }
tokio-util = { version = "^0.6", features = ["codec"] }
futures = "^0.3"
futures-util = { version = "0.3.4" }
read-progress-stream = "^1"
pbr = "1.0.4"
serde_json = "1"
