[package]
name = "release"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = {version = "0.1", path = "../cache" }
config = {version = "0.1", path = "../config" }
publisher = {version = "0.1", path = "../publisher" }

thiserror = "1"
log = "0.4.8"
semver = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5.0-alpha.2"
serde_json = "1"
hex = "0.4.2"
sha3 = "0.9.1"
reqwest = "0.10"
human_bytes = "0.2.1"
