[package]
name = "release"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }
dirs = {version = "0.1", path = "../dirs" }
plugin = {version = "0.1", path = "../plugin" }
publisher = {version = "0.1", path = "../publisher" }
scm = {version = "0.1", path = "../scm" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
semver = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.5.1"
serde_json = "1"
hex = "0.4.2"
sha3 = "0.9.1"
reqwest = "0.11"
http = "0.2"
human_bytes = "0.2.1"
url = "2"
toml = "0.5"
pbr = "1.0.4"
crossterm = "0.19.0"
tempfile = "3.1.0"
chrono = { version = "0.4", features = ["serde"] }
