[package]
name = "server-actix"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = { version = "0.1", path = "../config" }
livereload = { version = "0.1", path = "../livereload" }
workspace = { version = "0.1", path = "../workspace" }
utils = { version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
url = "2"
open = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
futures = "0.3.7"
futures-util = { version = "0.3.4" }
once_cell = "1.4"
libc = "0.2"
bracket = "^0.9.32"

tokio = { version = "^1.0", features = ["full"] }

webdav-handler = { path = "../../../library/webdav-handler-rs", version = "0.2.0-alpha.6", features = ["actix-compat"] }
actix-web = { version = "4.0.0-beta.3", features = ["rustls"] }
actix-web-actors = "4.0.0-beta.2"
actix-files = "0.6.0-beta.2"
rustls = "0.19"

#actix-web = {version = "^4.0.0-beta.1", features = ["rustls"] }
#actix-files = "^0.6.0-beta.2"
#rustls = "0.19"

warp = { version = "0.3", features = ["tls", "websocket"] }
notify = { version = "5.0.0-pre.4" }
