[package]
name = "server"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = { version = "0.1", path = "../config" }
livereload = { version = "0.1", path = "../livereload" }
workspace = { version = "0.1", path = "../workspace" }
utils = { version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
url = "2"
open = "1.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
futures = "0.3"
futures-util = { version = "0.3.4" }
once_cell = "1.4"
libc = "0.2"
bracket = "^0.9.32"
webdav-handler = { version = "0.2.0-alpha.6", features = ["warp-compat"] }

tokio = { version = "^1.0", features = ["full"] }
warp = { version = "0.3", features = ["tls", "websocket"] }
notify = { version = "5.0.0-pre.4" }
