[package]
name = "site"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = {version = "0.1", path = "../cache" }
config = {version = "0.1", path = "../config" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
