[package]
name = "syntax"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }

thiserror = "1"
once_cell = "1.4"

[dependencies.syntect]
version = "4.2"
path = "/home/muji/git/2.external/syntect"
default-features = false
features = [
  "regex-onig",
  "dump-load",
  "html",
]
