[package]
name = "syntax"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = {version = "0.1", path = "../config" }

thiserror = "1"
once_cell = "1.4"

[dependencies.syntect]
version = "4.3"
default-features = false
features = [
  "regex-fancy",
  "dump-load",
  "html",
]

# Note that currently there is a linker error when cross-compiling
# to macos with the `onig` regex library so we use the slower 
# rust only version so that cross-compiling works ok for now.
#[target.x86_64-apple-darwin.dependencies]
#config = {version = "0.1", path = "../config" }
#thiserror = "1"
#once_cell = "1.4"
#syntect = {version = "4.3", default-features = false, features = ["regex-fancy", "dump-load", "html"]}
