[package]
name = "ui"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = { version = "0.1", path = "../config" }

thiserror = "1"
rust-embed = "5.9"
rand = "0.8"
log = "0.4.8"
serde = "1"
serde_json = {version = "1", features = ["raw_value"] }
wry = "0.5.1"
tinyfiledialogs = "3.3.10"
