[package]
name = "ui"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = { version = "0.1", path = "../config" }

thiserror = "1"
rust-embed = "5.9"
rand = "0.8"
log = "0.4.8"
serde = "1"
serde_json = "1"
#wry = "0.5.1"
wry = { version = "0.5.1", path = "/home/muji/git/2.external/wry" }
tinyfiledialogs = "3.3.10"
json-rpc2 = { version = "0.7", features = ["async"] }
