[package]
name = "ui"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
config = { version = "0.1", path = "../config" }
dirs = { version = "0.1", path = "../dirs" }
project = { version = "0.1", path = "../project" }

thiserror = "1"
rust-embed = { version = "5.9", features = ["compression"] }
rand = "0.8"
log = "0.4.8"
serde = "1"
serde_json = "1"
#wry = "0.5.1"
wry = { version = "0.5.1", path = "/home/muji/git/2.external/wry" }
#wry = { version = "0.5.1" }
tinyfiledialogs = "3.3.10"
json-rpc2 = { version = "0.10.0", features = ["async"] }
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
psup-impl = "0.6.3"
#psup-impl = { version =  "0.6", path = "/home/muji/git/psup/impl" }
psup-json-rpc = "0.6"
once_cell = "1.4"
open = "1.1"
