[package]
name = "updater"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = {version = "0.1", path = "../cache" }
dirs = {version = "0.1", path = "../dirs" }
preference = {version = "0.1", path = "../preference" }
utils = {version = "0.1", path = "../utils" }

log = "0.4.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
toml = "0.5"
