[package]
name = "utils"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
thiserror = "1"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
ignore = "^0.4"
crossbeam = "0.7"
crossterm = "0.19.0"
terminal_size = "^0.1.12"
#unicode-width = "0.1.8"
