[package]
name = "web_host"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
rusoto_core = "0.46.0"
rusoto_signature = "0.46.0"
rusoto_s3 = "0.46.0"
rusoto_cloudfront = "0.46.0"
rusoto_route53 = "0.46.0"
rusoto_acm = "0.46.0"
tokio = { version = "^1.0", features = ["full"] }
serde_json = "1"
serde_with = "1.5.1"
serde = "1"
toml = "0.5"
url = "2"
once_cell = "1.4"
strum_macros = "0.20.1"
async-trait = "0.1.40"
trust-dns-client = "0.20.0"
