[package]
name = "workspace"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
compiler = {version = "0.1", path = "../compiler" }
config = {version = "0.1", path = "../config" }
datasource = {version = "0.1", path = "../datasource" }
loader = {version = "0.1", path = "../loader" }
locale = {version = "0.1", path = "../locale" }
runtime = {version = "0.1", path = "../runtime" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
