[package]
name = "workspace"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = {version = "0.1", path = "../cache" }
collator = {version = "0.1", path = "../collator" }
compiler = {version = "0.1", path = "../compiler" }
config = {version = "0.1", path = "../config" }
datasource = {version = "0.1", path = "../datasource" }
locale = {version = "0.1", path = "../locale" }
preference = {version = "0.1", path = "../preference" }
search = {version = "0.1", path = "../search" }
syntax = {version = "0.1", path = "../syntax" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
log = "0.4.8"
human_bytes = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
fs2 = "0.4.3"
url = "2.1.1"
