[package]
name = "workspace"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
collator = {version = "0.1", path = "../collator" }
collections = {version = "0.1", path = "../collections" }
compiler = {version = "0.1", path = "../compiler" }
config = {version = "0.1", path = "../config" }
dirs = {version = "0.1", path = "../dirs" }
livereload = {version = "0.1", path = "../livereload" }
locale = {version = "0.1", path = "../locale" }
plugin = {version = "0.1", path = "../plugin" }
preference = {version = "0.1", path = "../preference" }
release = {version = "0.1", path = "../release" }
scm = {version = "0.1", path = "../scm" }
search = {version = "0.1", path = "../../../library/search/backend" }
syntax = {version = "0.1", path = "../syntax" }
utils = {version = "0.1", path = "../utils" }

thiserror = "1"
futures = "0.3"
log = "0.4.8"
human_bytes = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
fs2 = "0.4.3"
url = "2.1.1"
owning_ref = "^0.4.1"
ignore = "^0.4"
tokio = { version = "0.2.22", features = ["rt-core", "rt-threaded", "fs"] }
scopeguard = "1.1.0"
