[package]
name = "bundler"
version = "0.1.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"

[dependencies]
cache = { version = "0.1", path = "../../cache" }
git = { version = "0.1", path = "../../git" }
preference = { version = "0.1", path = "../../preference" }
utils = { version = "0.1", path = "../../utils" }

thiserror = "1"
log = "*"
ignore = "0.4"
human_bytes = "0.2.1"
